# chat-venture

./: Cargo.toml  README.md  template.env
src/: initial-prompt.md  main.rs  test.html
