[package]
name = "chatventure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.6"
env_logger = "0.10.0"
futures-util = "0.3.27"
log = "0.4.17"
openai = "1.0.0-alpha.6"
tokio = { version = "1.26.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
tungstenite = "0.18.0"
